todos component and UI

--- a/views/index.html
+++ b/views/index.html
@@ -16,13 +16,15 @@
 
     <script src="systemjs.config.js"></script>
     <script>
-      System.import('main.js').catch(function(err){ console.error(err); });
+      System.import('app').catch(function(err){ console.error(err); });
     </script>
   </head>
 
   <body>
-    <my-app>Mean todos app ...</my-app>
+    <my-app>Loading ...</my-app>
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
   </body>
 </html>
+
+
