--- a/client/app/components/todos.component.html
+++ b/client/app/components/todos.component.html
@@ -1,22 +1,26 @@
-<div class="add-todoform text-center">
+<div class="add-todo-form text-center">
     <h1>Add Todo</h1>
     <div class="form-group">
-        <input type="text" class="form-control input-lg" placeholder="Add Todo..." autofocus #todoText>
-        <br />
-        <button class="btn btn-primary btn-block">Create</button>
-    </div>
+        <input class="form-control input-lg" placeholder="Add Todo..." autofocus #todoText>
+        <br>
+        <button (click)="addTodo($event, todoText)" class="btn btn-primary btn-block">Create</button>    
+    </div>    
 </div>
+
 <div class="todo-list">
     <div *ngFor="let todo of todos">
         <div class="col-md-1">
-            <input type="checkbox">
-        </div>
+            <input type="checkbox" [checked]="todo.isCompleted" (click)="updateStatus(todo)">
+        </div>    
         <div class="col-md-7">
-            {{todo.text}}
-        </div>
+            <span [class.hidden]="todo.isEditMode">{{todo.text}}</span>
+            <input [class.hidden]="!todo.isEditMode" type="text" [value]="todo.text" (keypress)="updateTodoText($event, todo)">
+            <input [class.hidden]="!todo.isEditMode" type="button" (click)="setEditStatus(todo, false)" class="btn btn-warning" value="Cancel">
+            
+        </div>  
         <div class="col-md-4 btns">
-            <input type="button" class="btn btn-danger pull-right" value="Delete">
-            <input type="button" class="btn btn-danger pull-right" value="Edit">
-        </div>
+            <input type="button" class="btn btn-danger pull-right" value="Delete" (click)="deleteTodo(todo)"> 
+            <input type="button" class="btn btn-default pull-right" value="Edit" [class.disabled]="todo.isCompleted" (click)="setEditStatus(todo, true)">
+        </div>  
     </div>
 </div>
